src/stylesheets/Dashboard.css
/* Export Modal Styling*/
.backdrop {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: #000000e1;
  display: flex;
  align-items: center;
  justify-content: center;
}

#canvas_backdrop {
  background-color: white;
  /* border-style: solid; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: linear-gradient(90deg, black 50%, transparent 50%), 
              linear-gradient(90deg, black 50%, transparent 50%), 
              linear-gradient(0deg, black 50%, transparent 50%), 
              linear-gradient(0deg, black 50%, transparent 50%);
    background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
    background-size: 16px 4px, 16px 4px, 4px 16px, 4px 16px;
    background-position: 0% 0%, 100% 100%, 0% 100%, 100% 0px;
    border-radius: 5px;
    padding: 10px;
    animation: dash 15s linear infinite;
}
@keyframes dash {
  to {
    background-position: 100% 0%, 0% 100%, 0% 0%, 100% 100%;
}
}
.abstract_modal {
  width: clamp(50%, 800px, 90%);
  height: min(50%, 700px);
  margin: auto;
  padding: 0 1rem 0 5rem;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  background: #c4c4c4;
}

#export_form {
  width: 90%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-content: flex-start;
  align-items: flex-start;
}

#close_modal {
  display: flex;
  justify-content: right;
  align-self: flex-end;
  align-items: flex-end;
  padding: 15px;
  border: none;
  background: none;
  font-size: 2rem;
}

#export_form input {
  width: 100%;
}

.export_form_container {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-self: flex-start;
}

.export_form_container h2,
.export_form_container h3 {
  margin: .5rem 0 .5rem 0;
}

#component_menu h3 {
  padding-top: 25px;
}
.export_form_container input {
  margin: .5rem 0 .5rem 0;
  height: 1.25rem;
}

#submit_export_button {
  display: flex;
  justify-content: center;
  align-self: center;
  
}

/* Dashboard Styling */
#dashboard {
  display: grid;
  grid-template-columns: 1fr 3fr;
}

/* Component Menu Styling*/
#component_menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: scroll;
  height: 1024px;
  width: 306px;
  border: 0.25px solid;
  background-color: #f5fbff
}
#component_menu_banner {
  width: 100%;
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #456DAA;
  font-size: 20px;
  font-weight: bold;
  color: whitesmoke;
  height: 60px;
}

/* Dashboard-Right Styling */
#dashboard_right {
  display: grid;
  grid-template-columns: 60% auto 100px;
  grid-template-rows: 124px 420px auto;
  grid-template-areas: 
  "profile_button_container profile_button_container profile_button_container"
  "body_container body_container size_button"
  "body_container body_container nav_button";

  height: 1024px;
  width: 1060px;
  background-color: white;
}

/* #abstract_title {
  grid-area: dashboard_header;
  grid-column-end: two;

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;

  height: 124px;

  font-size: 48px;
}

#dashboard_header svg {
  height: 60px;
  width: 60px;
} */

#profile_button_container {
  grid-area: profile_button_container;
  grid-column-end: four;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  /* border: 2px solid #093A7B; */
  margin-right: 20px;

  height: 124px;
}

#profile_button {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;

  height: 85px;
  width: auto;

  background-color: #f5fbff;
  border: 2px solid #093A7B;

  margin-right: 12px;
}

/* #profile_button svg {
  width: 32px;
  height: 32px;
  margin-right: 12px;
} */

#export_modal_button {
  height: 85px;
  width: 120px;
  padding-left: 10px;
  padding-right: 10px;
  background-color: #C4C4C4;
  border: none;
}

#body_container {
  grid-area: body_container;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  height: 878px;
  width: 100%;
  background-color: white;
}

#code_preview {
  background-color: #2E4053;
  height: 700px;
  width: 700px;
  overflow-y: scroll;
  padding: 0px 25px 0px 25px;
}

#size_button_container {
  grid-area: size_button;
  grid-column-end: one;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: flex-start;
  margin-top: 48px;
  margin-right: 12px;
}

#size_button_container button {
  width: 85px;
  height: 85px;

  background-color: #C4C4C4;
  border: none;

  margin-bottom: 24px;
}

#size_button:active {
  transform: scale(1.1);
}

#size_button_container svg {
  width: 48px;
  height: 48px;
}

#nav_buttons {
  grid-area: nav_button;
  grid-column-end: one; 
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: flex-start;
  margin-right: 12px;

}

#canvas_button,
#preview_button {
  width: 85px;
  height: 85px;

  background-color: #C4C4C4;
  border: none;

  margin-bottom: 24px;
}

#canvas_button:active,
#preview_button:active  {
  transform: scale(1.1);
}

#nav_buttons svg {
  width: 48px;
  height: 48px;
}

#gitHubLogo {
  width: 40px;
  height: 40px;
  padding-right: 10px;
}

.compMenuBtn {
  width: 100%;
  margin-top: 15px;
  height: 40px;
  border-top: 2px solid #093A78;
  border-bottom: 2px solid #093A78;;
  border-left: none;
  border-right: none;
}

.compMenuBtn:hover {
  color: #3e3eff;

}

#library-div {
  margin-top: 25px;
  display: grid;
  grid-template-columns: repeat(2, 90%);
  grid-template-rows: repeat(3, auto);
  justify-items: center;
  justify-content: center;
  text-align: center;
}

#componentIcon {
  width: 50px;
  height: 50px;
}

#conditionalForm {
  padding-top: 25px;
  display: grid;
  justify-items: center
}

.componentButton:hover {
  color: #3e3eff;
}
.componentButton:focus {
  color: #3e3eff;
  border-color: #456DAA;
}
#addButton {
  padding: 7px 10px 7px 10px;
  margin-top: 40px;
  width: 150px;
  color: white;
  background-color: #2B2929;
}

#h2 {
  font-size: 1rem;
}

@media (min-width: 0px) {
  #dashboard_right {
    width: auto;
    height: auto
  }
   
  #body_container {
    width: auto;
  }

}

